--- a/ASCII_G/ASCII_G.vcxproj
+++ b/ASCII_G/ASCII_G.vcxproj
@@ -143,11 +143,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Color.h" />
+    <ClInclude Include="ColorChar.h" />
     <ClInclude Include="ColorString.h" />
+    <ClInclude Include="Frame.h" />
+    <ClInclude Include="Image.h" />
     <ClInclude Include="PixelDriver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ColorChar.cpp" />
+    <ClCompile Include="ColorString.cpp" />
+    <ClCompile Include="Image.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PixelDriver.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
