--- a/ASCII_G/ASCII_G.vcxproj.filters
+++ b/ASCII_G/ASCII_G.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="Image.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Animation.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
