Added string->ChangeMap conversion

--- a/ASCII_G/ASCII_G.vcxproj
+++ b/ASCII_G/ASCII_G.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="ChangeMap.cpp" />
     <ClCompile Include="ColorChar.cpp" />
     <ClCompile Include="ColorString.cpp" />
+    <ClCompile Include="GraphicObject.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PixelDriver.cpp" />
