--- a/ASCII_G/ASCII_G.vcxproj.filters
+++ b/ASCII_G/ASCII_G.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="Routine.h">
       <Filter>Header Files\src</Filter>
     </ClInclude>
+    <ClInclude Include="GraphicObjectManager.h">
+      <Filter>Header Files\src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Animation.cpp">
